# System-Architecture---compage

./: .Makefile.swp  .gitignore  CMakeLists.txt  Makefile  README.md
compage/: CMakeConfig.cmake.in  CMakeLists.txt
compage/inc/: compage_hash.h  compage_macro.h  compage_register.h  notification.h
compage/lib/ini/: ini.c
compage/src/: compage.cpp  compage_config.cpp  compage_llist.cpp
examples/: CMakeLists.txt  Makefile
examples/basic_usage/: CMakeLists.txt
examples/basic_usage/src/: main.cpp
examples/basic_usage_detailed/: CMakeLists.txt  Makefile
examples/basic_usage_detailed/src/: main.cpp
examples/controlled_startup/: CMakeLists.txt
examples/controlled_startup/src/: main.cpp
inc/: compage.h  compage_config.h  compage_hash.h  compage_llist.h  compage_macro.h  compage_register.h  compage_types.h  utils.h
lib/ini/: ini.c  ini.h
src/: compage.cpp  compage_config.cpp
tests/: .Makefile.swp  Makefile  config.ini
tests/src/: main.cpp  worker.cpp  worker_copy.cpp  worker_no_data.cpp
